# SpeechFeatureGenerator

./: .gitignore  README.md  pyproject.toml
data/: phoneme_labels_attribute.csv  phoneme_labels_standard.csv
examples/: natural-normal.TextGrid  phoneme.py
features/: diphone.py  phoneme.py
speechfeaturegenerator/: __init__.py
speechfeaturegenerator/features/: __init__.py  diphone.py  entropy.py  glove.py  lexical.py  mel_spectrogram.py  phoneme.py  phonotactic.py  surprisal.py  syllable.py  word.py  wordfreq.py
speechfeaturegenerator/utils/: __init__.py  embeddings.py  features.py  io.py  mel_spectrogram.py  phoneme_inventory.py  phoneme_reader.py  textgrid_reader.py  waveform.py
utils/: features.py  io.py  word_reader.py
